modficação das imagens

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <section>
         <figure>
           <img
-            src="https://cdn-sharing.adobecc.com/content/storage/id/urn:aaid:sc:US:3e5bdfff-8c40-42c0-8fd9-125ed8881d4e;revision=0?component_id=5497ec8b-07d9-4bb7-a3a9-7ccb1abf6868&api_key=CometServer1&access_token=1687426123_urn%3Aaaid%3Asc%3AUS%3A3e5bdfff-8c40-42c0-8fd9-125ed8881d4e%3Bpublic_74273eba93129962eb1f96c6860495a3fa59dc47"
-            alt=""
+            src="witcher simbol.png"
+            alt="simbolo"
           />
         </figure>
         <h2>PROJETO VERMELHO</h2>
@@ -32,13 +32,13 @@
         <figure class="thewitcher">
           <img
             class="hunt"
-            src="https://cdn-sharing.adobecc.com/content/storage/id/urn:aaid:sc:US:3e5bdfff-8c40-42c0-8fd9-125ed8881d4e;revision=0?component_id=83989b9b-4c1b-4940-85ca-d667cd75cf88&api_key=CometServer1&access_token=1687520479_urn%3Aaaid%3Asc%3AUS%3A3e5bdfff-8c40-42c0-8fd9-125ed8881d4e%3Bpublic_6537d8946df8bd194f9cea100cbc0f5d5af25fc1"
-            alt=""
+            src="the witcher.jpeg.png"
+            alt="thewitcher"
           />
           <img
             class="botao"
-            src="https://cdn-sharing.adobecc.com/content/storage/id/urn:aaid:sc:US:3e5bdfff-8c40-42c0-8fd9-125ed8881d4e;revision=0?component_id=3b4cd810-664f-40ae-9d01-bc4330522bea&api_key=CometServer1&access_token=1687520479_urn%3Aaaid%3Asc%3AUS%3A3e5bdfff-8c40-42c0-8fd9-125ed8881d4e%3Bpublic_6537d8946df8bd194f9cea100cbc0f5d5af25fc1"
-            alt=""
+            src="botão.png"
+            alt="botao assista"
           />
         </figure>
       </section>
